--- a/src/assets/CSS/style.css
+++ b/src/assets/CSS/style.css
@@ -178,5 +178,12 @@ left: 0;
 }
 
 #salon-highlight {
-    height: 30vh;
+    height: 35vh;
+}
+
+.member-img {
+    display: inline-block;
+    height: 200px;
+    width: 200px;
+    margin: auto;
 }
